@@ -1,5 +1,10 @@
 2006-12-29 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
 
+	* CamelliaTransformLE.cs: インライン展開による最適化 (キースケジューリング部を重点的に)
+	(循環シフトのコストが高いから、内部演算をビッグエンディアンにした方がいいかも)
+
+2006-12-29 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
+
 	* CamelliaTransformBE.cs: インライン展開による最適化 (キースケジューリング部を重点的に)
 
 2006-12-29 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
